quick img src fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="item" *ngFor="let concert of concerts">
-      <img src="{{concert.featuredImage}}" alt="Something">
+      <img src="assets/{{concert.featuredImage}}" alt="Something">
       <div class="carousel-caption">
         <h3>{{concert.name}}</h3>
       </div>
