trying around with ngIf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,12 @@
       </div>
     </div>
     <div class="item" *ngFor="let concert of concerts">
+      <ng-container *ngIf=''>
       <img src="./assets/{{concert.featuredImage}}" alt="Something">
       <div class="carousel-caption">
         <h3>{{concert.name}}</h3>
       </div>
+      </ng-container>
     </div>
   </div>
 
